--- a/app/static/core/lotNumModal.css
+++ b/app/static/core/lotNumModal.css
@@ -4,8 +4,12 @@
     z-index: 9999 !important;
 }
 
-#newLotNumFormContainer {
+#newLotNumFormContainer, #editLotNumFormContainer {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#id_lot_number {
+    background-color: lightgray;
 }
