--- a/app/core/templates/core/modals/schedule-addlot-modal.html
+++ b/app/core/templates/core/modals/schedule-addlot-modal.html
@@ -43,3 +43,9 @@
     </div>
     </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+        $('input').prop('readonly', true)
+    });
+</script>
