--- a/app/core/templates/core/modals/schedule-addlot-modal.html
+++ b/app/core/templates/core/modals/schedule-addlot-modal.html
@@ -37,15 +37,13 @@
                     </form>
                 </div>
             {% endif %}
-            
         </div>
-        
     </div>
     </div>
 </div>
 
 <script>
-    $(document).ready(function(){
-        $('input').prop('readonly', true)
-    });
+    //$(document).ready(function(){
+    //    $('input').prop('readonly', true)
+    //});
 </script>
