add tank radar levels to kpklauncher

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -287,7 +287,11 @@
         </a>
         <h2>Tanks and Totes</h2>
         <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Daily%20Inventory/Prod/Blending%20Tanks%20and%20Totes%20Inventory.xlsb" class="icon-link d-inline-flex align-items-center">
-          Open Tanks and Totes
+          Open Tanks and Totes Sheet
+          <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+        </a>
+        <a href="http://192.168.178.169:1337/core/tanklevels/" class="icon-link d-inline-flex align-items-center">
+          Open Tank Radar Levels Page
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
       </div>
