--- a/app/prodverse/templates/prodverse/excelinline.html
+++ b/app/prodverse/templates/prodverse/excelinline.html
@@ -14,11 +14,9 @@
 {% block content %} 
 <style>
     iframe {
-        position: relative;
-        top: -60px;
     }
 </style>
-<iframe frameborder="0" allowfullscreen width="1660" height="1080" src="https://adminkinpak.sharepoint.com/:x:/r/sites/PDTN/_layouts/15/Doc.aspx?sourcedoc=%7B53E2F379-215A-4CAD-B3B3-4E36EF3A68E7%7D&file=Starbrite%20KPK%20production%20schedule.xlsb&action=embedview&ActiveCell=%27INLINE%27%21C6&wdHideSheetTabs"></iframe>
+<iframe frameborder="0" allowfullscreen width="1660" height="1080" src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\inlineschedule.html' %}"></iframe>
   {% endblock content %}
 <!-- End Body -->
 {% block belowdeckscripts %}
