--- a/app/prodverse/templates/prodverse/excelinline.html
+++ b/app/prodverse/templates/prodverse/excelinline.html
@@ -41,29 +41,16 @@
 <iframe id='scheduleframe' frameborder="0" allowfullscreen width="1660" height="1080" src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\inlineschedule.html' %}"></iframe>
 <script>
     $(function() {
-        document.getElementById('scheduleframe').src += '';
-        $("#horixbutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\horixschedule.html' %}";
+        const scheduleFrame = $('#scheduleframe');
+        scheduleFrame.src += '';
+      
+        const scheduleButtons = ['horixbutton', 'inlinebutton', 'blisterbutton', 'pdbutton', 'jbbutton', 'oilbutton', 'kitbutton'];
+        scheduleButtons.forEach(buttonId => {
+          $(`#${buttonId}`).click(function(e) {
+            scheduleFrame.src = `{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\${buttonId.replace('button', 'schedule')}.html' %}`;
+          });
         });
-        $("#inlinebutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\inlineschedule.html' %}";
-        });
-        $("#blisterbutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\blisterschedule.html' %}";
-        });
-        $("#pdbutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\pdschedule.html' %}";
-        });
-        $("#jbbutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\jbschedule.html' %}";
-        });
-        $("#oilbutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\oilschedule.html' %}";
-        });
-        $("#kitbutton").click(function(e) {
-            document.getElementById('scheduleframe').src="{% static '\prodverse\html\Kinpak, Inc\Production - Web Parts\kitschedule.html' %}";
-        });
-    });
+      });
 </script>
 {% endblock content %}
 <!-- End Body -->
