Update styling & add report dropdown to several pgs

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -28,7 +28,26 @@
             </thead>
             {% for item in blend_these_queryset %}
                 <tr>
-                    <td>{{ item.blend_pn }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">
+                                    Lot Numbers
+                                </a></li>
+                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">
+                                    Transaction History
+                                </a></li>
+                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">
+                                    Upcoming Runs
+                                </a></li>
+                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">
+                                    Count History
+                                </a></li>
+                            </ul>
+                            {{ item.blend_pn }}
+                        </div>
+                    </td>
                     <td>{{ item.blend_desc }}</td>
                     <td>{{ item.starttime|floatformat:2 }}</td>
                     <td>{{ item.prodline }}</td>
