--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -47,7 +47,7 @@
                             <option data-reportval="Transaction-History" class="reportOption">Transaction History</option>
                             <option data-reportval="Lot-Numbers" class="reportOption">Lot Numbers</option>
                             <option data-reportval="All-Upcoming-Runs" class="reportOption">All Upcoming Runs</option>
-                            <option data-reportval="Physical-Count-History" class="reportOption">Physical Count History</option>
+                            <option data-reportval="Count-History" class="reportOption">Count History</option>
                             <option data-reportval="Counts-And-Transactions" class="reportOption">Counts And Transactions</option>
                         </select>
                     </td>
