--- a/app/core/static/core/countlist.css
+++ b/app/core/static/core/countlist.css
@@ -33,6 +33,8 @@ input[name*='counted_date'] {
 
 td {
     width: auto;
+    vertical-align: middle;
+    white-space: nowrap;
 }
 
 input[id*='variance'] {
