--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -57,7 +57,26 @@
                     <td class='text-center'>
                         <input type="checkbox" name={{ item.id }} class="rowCheckBox"></input>
                     </td>
-                    <td>{{ item.part_number }}</td>
+                    <td>
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">
+                                    Lot Numbers
+                                </a></li>
+                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">
+                                    Transaction History
+                                </a></li>
+                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">
+                                    Upcoming Runs
+                                </a></li>
+                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">
+                                    Count History
+                                </a></li>
+                            </ul>
+                            {{ item.part_number }}
+                        </div>
+                    </td>
                     <td>{{ item.description }}</td>
                     <td>{{ item.lot_number }}</td>
                     <td class='text-center'>{{ item.lot_quantity|floatformat:0 }}</td>
