--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -59,18 +59,20 @@
                     </td>
                     <td>
                         <div class="dropdown">
-                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
+                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa fa-info-circle"></i>
+                            </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.blend_pn }}">
+                                <li><a class="dropdown-item" href="/core/reports/Lot-Numbers/{{ item.part_number }}">
                                     Lot Numbers
                                 </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.blend_pn }}">
+                                <li><a class="dropdown-item" href="/core/reports/Transaction-History/{{ item.part_number }}">
                                     Transaction History
                                 </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.blend_pn }}">
+                                <li><a class="dropdown-item" href="/core/reports/All-Upcoming-Runs/{{ item.part_number }}">
                                     Upcoming Runs
                                 </a></li>
-                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.blend_pn }}">
+                                <li><a class="dropdown-item" href="/core/reports/Count-History/{{ item.part_number }}">
                                     Count History
                                 </a></li>
                             </ul>
