--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -53,7 +53,7 @@
             </a>
         </div>
         </br>
-        <div id="encodedListDiv" data-encoded-list="{{ encoded_list }}"></div>
+        <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
     {% endif %}
         <div id="addBlendButtonContainer" class="buttonContainer">
             <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBlendModal">
