Specify removal of dropdown chevrons.

--- a/app/core/static/core/lotNumRecords.css
+++ b/app/core/static/core/lotNumRecords.css
@@ -14,16 +14,14 @@
     background-color: rgb(255, 237, 138);
 }
 
-.dropdown-toggle {
-    
-}
+
 
 td {
     vertical-align: middle;
     white-space: nowrap;
 }
 
-.dropdown-toggle::after {
+.blendinfo.dropdown-toggle::after {
     display: none;
 }
 
